# chess-rollup

./: .gitmodules  README.md
bridge/src/: Constants.sol  Types.sol
bridge/src/libraries/: HashArray.sol  Merkle.sol  RLPReader.sol
bridge/src/playground/: DataAvailability.sol
bridge/src/rollup/: Rollup.sol
bridge/src/test/: ExampleERC20.sol  ExampleERC721.sol  HashArrayTest.sol  MerkleTest.sol
dac/: Cargo.toml  metadata.json
dac/client/: Cargo.toml
dac/client/src/: dac.rs  lib.rs
dac/pkg/: manifest.json  metadata.json
elf_program/: Cargo.toml
elf_program/elf/: riscv32im-succinct-zkvm-elf
elf_program/src/: chess_engine.rs  engine.rs  main.rs  rollup_lib.rs  tx.rs
erc20_sequencer/: metadata.json
erc20_sequencer/pkg/: manifest.json
erc20_sequencer/sequencer/: Cargo.toml
erc20_sequencer/sequencer/src/: lib.rs  tx.rs
kino/: metadata.json
kino/kino/: Cargo.toml
kino/kino/src/: lib.rs
kinode_package/kino/src/: lib.rs
kinode_package/pkg/: manifest.json
moves/: Cargo.toml  gen-moves.cjs  package-lock.json  package.json
moves/src/: main.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
prover/: README.md  metadata.json
prover/pkg/: manifest.json
prover/prover/: Cargo.toml
prover/prover/src/: lib.rs
prover_extension/: Cargo.toml  README.md  asdf.rs
prover_extension/src/: main.rs  prover_types.rs
script/: Cargo.toml  proof-with-io.json
script/src/: main.rs
sequencer/: Cargo.toml  README.md  metadata.json
sequencer/disperser/: Cargo.toml
sequencer/disperser/src/: lib.rs
sequencer/pkg/: manifest.json
sequencer/pkg/ui/: index.html
sequencer/pkg/ui/assets/: index-068a659d.js  index-0b8a3812.js  index-286d4abf.js  index-5d60e974.js  index-6fcdc21a.css  index-b51a00bf.js  index-be6156e9.css  index-c27510b6.css  index-c41c96d2.js
sequencer/sequencer/: Cargo.toml
sequencer/sequencer/src/: bridge_lib.rs  chess_engine.rs  dac.rs  engine.rs  lib.rs  prover_types.rs  rollup_lib.rs  rpc.rs
sequencer_ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sequencer_ui/src/: App.css  App.tsx  config.ts  global.d.ts  index.css  input.css  main.tsx  store.ts  tx.tsx
sequencer_ui/src/abis/: Bridge.json  Rollup.json
sequencer_ui/src/components/: Bridge.tsx  InitiateWithdraw.tsx  MyGames.tsx  Navbar.tsx  PendingGames.tsx  ProposeGame.tsx  Resign.tsx  Transfer.tsx  Withdraw.tsx
sequencer_ui/src/libs/: connections.tsx  constants.ts  injected.ts  network.ts
sequencer_ui/src/libs/components/: ConnectionOptions.tsx  Option.tsx  Web3ContextProvider.tsx
test_prover/: proof-with-io.json
tx_generator/src/: main.rs
