[workspace]
[package]
version = "0.1.0"
name = "chess-program"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
alloy-primitives = { version = "0.6.4", features = ["serde"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "34398dc" }
alloy-sol-types = "0.6.4"
chess = "3.2.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }

[patch.crates-io]
# TODO add patch for ECDSA sigs once it is ready
# Patch sha2 so we can use sha precompiles
sha2-v0-10-6 = { git = "https://github.com/succinctbot/RustCrypto-hashes.git", package = "sha2", branch = "main" }
