[workspace]
[package]
version = "0.1.0"
name = "prover_extension"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3.30"
kinode_lib = { git = "https://github.com/kinode-dao/kinode", tag = "v0.6.0" }
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
tokio = { version = "1.28", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-tungstenite = "0.21"
url = "2.2.2"
