[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
alloy-primitives = { version = "0.6.3", features = ["serde"] }
alloy-signer = { path = "../../../alloy/crates/signer" }
alloy-sol-types = "0.6.3"
anyhow = "1.0"
bincode = "1.3.3"
chess = "3.2.0"
hex = "0.4.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
